<?xml version="1.0"?>
<package format="2">
  <name>atom_interface</name>
  <version>0.0.0</version>
  <description>The atom_interface package</description>
  <maintainer email="karl.kangur@gmail.com">Karl Kangur</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
