<?xml version="1.0"?>
<package format="2">
  <name>atom_interface_vrep</name>
  <version>0.0.0</version>
  <description>The atom_interface_vrep package</description>
  <maintainer email="karl.kangur@gmail.com">Karl Kangur</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>atom_interface</build_depend>
  <export>
  </export>
</package>
